--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
     "formidable": "^1.1.1",
+    "mime": "^2.2.0",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.5"
+    "mongoose": "^5.0.5",
+    "multer": "^1.3.0"
   }
 }
